--- a/project.css
+++ b/project.css
@@ -284,7 +284,7 @@
     height: 60px;
     width: 60px;
 
-    background-image: url(/my_projects/assets/html.png);
+    background-image: url(assets/html.png);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 15px 0px 0px 15px;
@@ -311,7 +311,7 @@
     height: 60px;
     width: 60px;
    
-    background-image: url(/my_projects/assets/css.png);
+    background-image: url(assets/css.png);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 15px 0px 0px 15px;
@@ -320,7 +320,7 @@
     height: 60px;
     width: 60px;
 
-    background-image: url(/my_projects/assets/js.png);
+    background-image: url(assets/js.png);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 15px 0px 0px 15px;
@@ -335,7 +335,7 @@
     width:950px;
     height: 200px;
   
-    background-image: url(/my_projects/assets/handshake.jpg);
+    background-image: url(assets/handshake.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
@@ -356,6 +356,9 @@
 }
 #m5txt{
     color: #e9ebf0;
+}
+.blk{
+    color: black;
 }
 .search{
     display: flex;
@@ -379,11 +382,12 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
 .flg1{
     height:45px;
     width: 45px;
-    background-image: url(/my_projects/assets/facebook.png);
+    background-image: url(assets/facebook.png);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -391,7 +395,7 @@
 .flg2{
     height:45px;
     width: 45px;
-    background-image: url(/my_projects/assets/github.png);
+    background-image: url(assets/github.png);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -399,7 +403,7 @@
 .flg3{
     height:45px;
     width: 45px;
-    background-image: url(/my_projects/assets/linkedin-icon\ 1.png);
+    background-image: url(assets/linkedin-icon\ 1.png);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -411,4 +415,5 @@
     display: flex;
     justify-content: space-between;
     margin-right: 40px;
+    gap: 10px;
 }
